UE-70084 Magic Leap blueprint Functions/Enums fail to load properly when reopening a project -Removed accidental add of win64 to SupportedTargetPlatforms in cl 5296816. #jira UE-70084 #rb none
[CL 5296890 by Jeff Fisher in 4.22 branch]

--- a/Engine/Plugins/Lumin/MagicLeap/MagicLeap.uplugin
+++ b/Engine/Plugins/Lumin/MagicLeap/MagicLeap.uplugin
@@ -15,8 +15,7 @@
 	"IsBetaVersion" : false,
 	"Installed": false,
 	"SupportedTargetPlatforms": [
-		"Lumin",
-		"Win64"
+		"Lumin"
 	],
 	"Modules" :
 	[
