Change NatvisHelpers to use C7 debug info, so we don't require a separate PDB.
#rb none
#jira UE-71257

[CL 5350373 by Ben Marsh in 4.22 branch]

--- a/Engine/Extras/NatvisHelpers/NatvisHelpers.vcxproj
+++ b/Engine/Extras/NatvisHelpers/NatvisHelpers.vcxproj
@@ -75,6 +75,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
+      <DebugInformationFormat>OldStyle</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -95,6 +96,7 @@
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
       <WholeProgramOptimization>false</WholeProgramOptimization>
+      <DebugInformationFormat>OldStyle</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
