turn on bitcode is shipping by default #rb trivial #jira UE-71628 #lockdown cristina.riveron
[CL 5419414 by Peter Sauerbrei in 4.22 branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1827,6 +1827,7 @@ bDevForArmV7S=False
 bShipForArmV7=False
 bShipForArm64=True
 bShipForArmV7S=False
+bShipForBitcode=True
 bTreatRemoteAsSeparateController=False
 bAllowRemoteRotation=True
 bUseRemoteAsVirtualJoystick=True
