Enabled the "Orbit camera around selection" setting by default.
#jira UE-71694

#rb JeanMichel.Dignard

[CL 5428265 by Anousack Kitisa in 4.22 branch]

--- a/Engine/Config/BaseEditorPerProjectUserSettings.ini
+++ b/Engine/Config/BaseEditorPerProjectUserSettings.ini
@@ -318,6 +318,7 @@ bUseAbsoluteTranslation=True
 bLevelStreamingVolumePrevis=False
 bUseUE3OrbitControls=False
 bUseDistanceScaledCameraSpeed=True
+bOrbitCameraAroundSelection=True
 ;Scroll gesture direction
 ScrollGestureDirectionFor3DViewports=UseSystemSetting
 ScrollGestureDirectionForOrthoViewports=UseSystemSetting
