Add new config values to go alongside "PlatformRequiresDataCrypto" which can specifically disable signing or encryption. Allows selective disabling of signing OR encryption on some platforms, rather than the old config value which would disable both. Disable signing on platforms that we wanted encryption enabled for by default (mobile mainly) Add a warning if pak signing or encryption is enabled but there is no key, then disable the offending functionality for that build
#rb none
#jira UE-71811, UE-71806
#lockdown cristina.riveron

[CL 5487098 by Graeme Thornton in 4.22 branch]

--- a/Engine/Config/Android/AndroidEngine.ini
+++ b/Engine/Config/Android/AndroidEngine.ini
@@ -4,6 +4,7 @@ DefaultBloomKernelTextureName=/Engine/EngineResources/DefaultTexture.DefaultText
 
 [PlatformCrypto]
 PlatformRequiresDataCrypto=True
+PakSigningRequired=False
 
 [/Script/Engine.GarbageCollectionSettings]
 gc.MaxObjectsInGame=131072
