--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2209,6 +2209,8 @@ DefaultCompletionMode=RestoreState
 
 [PlatformCrypto]
 PlatformRequiresDataCrypto=False
+PakSigningRequired=True
+PakEncryptionRequired=True
 
 [/Script/AppleARKit.AppleARKitSettings]
 bEnableLiveLinkForFaceTracking=true
