--- a/Engine/Config/IOS/IOSEngine.ini
+++ b/Engine/Config/IOS/IOSEngine.ini
@@ -7,6 +7,7 @@ gc.MaxObjectsInGame=131072
 
 [PlatformCrypto]
 PlatformRequiresDataCrypto=True
+PakSigningRequired=False
 
 [Audio]
 AudioDeviceModuleName=IOSAudio
